--- a/index.html
+++ b/index.html
@@ -116,7 +116,9 @@
         </form>
 
         <div id="result">
-            <input type="text" width="70%" id="result-url" placeholder="complete url">
+            <h3>Full URL</h3>
+            <input type="text" width="500%" id="result-url" placeholder="complete url">
+            <h3>QR Code & Download Link</h3>
             <div id="qr-code"></div>
             <a id="download-link" download="qr-code.png"><button>Download QR Code</button></a>
         </div>
