--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
         <div id="result">
             <h3>Full URL</h3>
-            <input type="text" width="500%" id="result-url" placeholder="complete url">
+            <input type="text" style="width: 60%;text-align: center; border: none;" id="result-url" placeholder="complete url">
             <h3>QR Code & Download Link</h3>
             <div id="qr-code"></div>
             <a id="download-link" download="qr-code.png"><button>Download QR Code</button></a>
