--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             <h3>Full URL</h3>
             <input type="text" style="width: 60%;text-align: center; border: none;" id="result-url" placeholder="complete url">
             <h3>QR Code & Download Link</h3>
-            <div id="qr-code"></div>
+            <div id="qr-code" style="margin: auto;"></div>
             <a id="download-link" download="qr-code.png"><button>Download QR Code</button></a>
         </div>
     </div>
