--- a/index.html
+++ b/index.html
@@ -75,6 +75,10 @@
         #theme-toggle:hover {
             background-color: #f7c600;
         }
+        canvas {
+            display: block;
+            margin: auto;
+        }
     </style>
 </head>
 <body>
