--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         #theme-toggle:hover {
             background-color: #f7c600;
         }
-        canvas {
+        img {
             display: block;
             margin: auto;
         }
